# ShapeUQLib

./: CMakeLists.txt  README.md
ShapeUQLib/CMake/: RigidBodyKinematicsConfig.cmake  ShapeUQLibConfig.cmake
include/: Adjacency_List.hpp  Bezier.hpp  Element.hpp  Facet.hpp  KDTree.hpp  RefFrame.hpp  ShapeModel.hpp  ShapeModelBezier.hpp  ShapeModelImporter.hpp  ShapeModelTri.hpp
include/ShapeUQLib/: Bezier.hpp  ControlPoint.hpp  Facet.hpp  FrameGraph.hpp  ShapeModel.hpp  ShapeModelBezier.hpp  ShapeModelTri.hpp  ShapeUQLib.hpp
share/ShapeUQLib/: ShapeUQLibConfig.cmake
source/: Bezier.cpp  ControlPoint.cpp  Element.cpp  Facet.cpp  FrameGraph.cpp  KDTree.cpp  RefFrame.cpp  ShapeModel.cpp  ShapeModelBezier.cpp  ShapeModelImporter.cpp  ShapeModelTri.cpp
test/: CMakeLists.txt  main.cpp
